--- a/main.css
+++ b/main.css
@@ -5,6 +5,13 @@
     width: 90%;
   }
 
+.centerlogo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+
 .blurb{
   display: block;
   margin-left: auto;
