--- a/main.css
+++ b/main.css
@@ -30,3 +30,24 @@
   width: 50%;
   text-align: center;
 }
+
+body { 
+  font-family: 'MessinaSansWeb';
+}
+
+h1{
+  font-size: 90px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@font-face {
+  font-family: 'MessinaSansWeb';
+  src:  url('MessinaSansWeb-Bold.woff2') format('woff2');
+        /* url('MessinaSansWeb-Book.woff2') format('woff2'),
+        url('MessinaSansWeb-Regular.woff2') format('woff2')
+        url('MessinaSansWeb-SemiBold.woff2') format('woff2')
+        url('NantesWeb-Light.woff2') format('woff2'),
+        url('NantesWeb-Regular.woff2') format('woff2'); */
+}
