--- a/main.css
+++ b/main.css
@@ -42,6 +42,20 @@ h1{
   margin-right: auto;
 }
 
+path { 
+  stroke: steelblue;
+  stroke-width: 2;
+  fill: none;
+}
+ 
+.axis path,
+.axis line {
+	fill: none;
+	stroke: grey;
+	stroke-width: 1;
+	shape-rendering: crispEdges;
+}
+
 @font-face {
   font-family: 'MessinaSansWeb';
   src:  url('MessinaSansWeb-Bold.woff2') format('woff2');
@@ -51,3 +65,7 @@ h1{
         url('NantesWeb-Light.woff2') format('woff2'),
         url('NantesWeb-Regular.woff2') format('woff2'); */
 }
+
+
+
+ 
